<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBEAE7E7"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="168dp"
        android:layout_marginRight="168dp"
        android:text="@string/title"
        android:textColor="#0D3BDF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/webBtn"
        android:layout_width="134dp"
        android:layout_height="47dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="208dp"
        android:layout_marginRight="208dp"
        android:onClick="webSiteClicked"
        android:text="@string/website"
        android:textColor="#0C0C0C"
        android:textColorHint="#FBF7F7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/mapBtn"
        android:layout_width="134dp"
        android:layout_height="47dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="208dp"
        android:layout_marginRight="208dp"
        android:onClick="mapClicked"
        android:text="@string/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webBtn" />

    <Button
        android:id="@+id/button"
        android:layout_width="134dp"
        android:layout_height="47dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="208dp"
        android:layout_marginRight="208dp"
        android:onClick="phoneClicked"
        android:text="@string/call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapBtn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="171dp"
        android:layout_marginLeft="171dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="182dp"
        android:layout_marginRight="182dp"
        android:text="@string/note"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailBtn" />

    <Button
        android:id="@+id/mailBtn"
        android:layout_width="134dp"
        android:layout_height="47dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="208dp"
        android:layout_marginRight="208dp"
        android:onClick="mailClicked"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>